# sig-barbershop

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  Dockerfile.dev  pyproject.toml
api/app/: database.py  dependencies.py  main.py
api/app/core/: security.py
api/app/db/: schema.sql  seed.sql
api/app/repositories/: agenda_repository.py  atendimento_repository.py  atendimento_servico_repository.py  barbeiro_repository.py  caixa_repository.py  cliente_repository.py  disponibilidade_repository.py  fidelidade_repository.py  historico_pontos_repository.py  historico_produto_repository.py  historico_servico_repository.py  pessoa_repository.py  produto_repository.py  servico_repository.py  telefone_repository.py  venda_produto_repository.py  venda_repository.py
api/app/routers/: atendimento_router.py  auth_router.py  barbeiro_router.py  caixa_router.py  cliente_router.py  disponibilidade_router.py  fidelidade_router.py  historico_pontos_router.py  pessoa_router.py  produto_router.py  servico_router.py  telefone_router.py  venda_router.py
api/app/schemas/: atendimento_schema.py  auth_schema.py  barbeiro_schema.py  caixa_schema.py  cliente_schema.py  disponibilidade_schema.py  fidelidade_schema.py  historico_pontos_schema.py  pessoa_schema.py  produto_schema.py  servico_schema.py  telefone_schema.py  (+1 more)
api/tests/: conftest.py  test_database.py  test_dependencies.py  test_disponibilidade_coverage_gaps.py  test_main.py  test_pessoa_a_coverage_gaps.py  test_schema_relacional_aprovado.py  test_security.py
(+233 files in other folders)
