[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Barbosa",email = "andre.barbosa.076@ufrn.edu.br"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
