[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Barbosa",email = "andre.barbosa.076@ufrn.edu.br"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "mysql-connector-python (>=9.7.0,<10.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "coverage (>=7.15.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 100
show_missing = true
